# rM-nonogram

./: .gitignore  README.md  deploy.sh  manifest.json  package.sh
.github/workflows/: build.yml
backend/: Cargo.toml  build.sh
backend/.cargo/: config.toml
backend/src/: appload.rs  main.rs  nonogram.rs  pdf_gen.rs
ui/: main.qml
