[package]
name = "nonogram-fetcher-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "entry"
path = "src/main.rs"

[dependencies]
libc = "0.2"
# HTTP client síncrono y ligero — 2.9 es compatible con Rust 1.75
ureq = { version = "=2.9.6", features = ["json"] }

# Parsing HTML — versión fijada para evitar dependencias con edition2024
scraper = "=0.17.1"

# Generación de PDF — 0.5.x es la última compatible con Rust estable 1.75
printpdf = "=0.5.0"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"



[profile.release]
opt-level = "z"      # Minimizar tamaño binario
lto = true
codegen-units = 1
strip = true
panic = "abort"
