[package]
name = "nonogram-fetcher-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "entry"
path = "src/main.rs"

[dependencies]
libc = "0.2"

# Lightweight sync HTTP client
ureq = { version = "=2.9.6", features = ["json"] }

# HTML parsing — pinned to avoid edition2024 deps
scraper = "=0.17.1"

# PDF generation with image-embedding support
printpdf = { version = "=0.5.0", features = ["embedded_images"] }

# Image decoding (PNG) — must match the version printpdf 0.5.0 uses internally
image = { version = "0.23", default-features = false, features = ["png"] }

# JSON
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level     = "z"   # minimise binary size
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
